tests/defer_defer/error.txt
Validation error: ./tests/defer_defer/defer_defer.fae:2
 Deferring a lone defer statement is disallowed
  2|     defer defer println("deferred defer")
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
